# mystops

./: .env.development  .eslintrc  .eslintrc.json  .flake8  .gitignore  README.md  TODO  commands.py  docker-compose.yaml  local.cfg  manage.py  mypy.ini  package-lock.json  package.json  process.yaml  pyproject.toml  settings.public.toml  tsconfig.json  tslint.json
ansible/: hosts  new  prod  production  site.yaml
ansible/roles/base/vars/: main.yaml
ansible/roles/deploy/tasks/: main.yaml
ansible/roles/deploy/templates/: mystops.conf.j2  mystops.ini.j2
config/: base.json  db.json  index.js
db/: client.js  index.js  middleware.js  pool.js
db/loaders/: index.js  routes.js  stopRoute.js  stops.js
db/migrations/: create-extensions.sql  create-functions.sql  create-table-migration.sql  create-table-route.sql  create-table-stop-route.sql  create-table-stop.sql  index.js  migrations.json
db/scripts/: migrate.js
docker/postgres/: Dockerfile
public/: index.html  manifest.json
scripts/: deploy.js  get-stops.js
server/: app.js  main.js
server/resources/: arrivals.js  index.js  stops.js
src/: .eslintrc  App.scss  App.tsx  BottomSheet.tsx  Menu.scss  Menu.tsx  ProgressIndicator.tsx  index.scss  index.tsx  main.ts  polyfills.ts
src/api/mystops/: asgi.py  local.base.cfg  settings.py  urls.py  wsgi.py
src/api/mystops/trimet/: api.py  (+4 more)
src/map/: Attributions.tsx  ContextMenu.tsx  Map.scss  Map.tsx  OpenLayersMap.tsx  OverviewSwitcher.tsx  StopInfo.tsx  const.ts  index.ts  styles.ts  utils.ts
src/mystops/: admin.py  const.ts  global.d.ts  state.ts  utils.ts
src/mystops/app/: client.wrapper.tsx
src/mystops/components/: ErrorComponent.tsx  IconButton.tsx  MapComponent.tsx  MapContext.ts  MapContextMenu.tsx  MapService.ts  MenuComponent.tsx  ResultComponent.tsx  SearchComponent.tsx  index.ts
src/mystops/hooks/: index.ts  useArrivalsQuery.ts  useHeaderHeight.ts
src/mystops/loaders/: routes.py  stop_routes.py  stops.py
src/mystops/migrations/: 0001_initial.py  0002_add_page_model.py
src/mystops/models/: __init__.py  page.py  route.py  schema.py  stop.py
src/mystops/routes/: error.tsx  layout.tsx  page.tsx
src/mystops/static/: global.css
src/mystops/trimet/: api.py  arrivals.py  exc.py  request.py  stops.py
src/search/: Error.tsx  Result.tsx  Search.scss  Search.tsx
src/store/: index.ts  interfaces.ts
src/store/actions/: index.ts  map.ts  search.ts
src/store/reducers/: index.ts  map.ts  search.ts
src/styles/: variables.scss
src/ui/: App.scss  App.tsx  App.vue  BottomSheet.tsx  Menu.scss  Menu.tsx  ProgressIndicator.tsx  const.ts  index.tsx  slice.ts  store.ts  vuex.d.ts
src/ui/assets/: global.scss
src/ui/components/: Error.vue  ErrorComponent.vue  Map.vue  MapComponent.vue  MapContextMenu.vue  MapService.ts  Menu.vue  MenuComponent.vue  Result.vue  ResultComponent.vue  Search.vue  SearchComponent.vue  StopInfo.vue  map-styles.ts  map.ts
src/ui/map/: Attributions.tsx  ContextMenu.tsx  Map.scss  Map.tsx  OpenLayersMap.tsx  OverviewSwitcher.ts  StopInfo.tsx  const.ts  slice.ts  styles.ts  types.ts  utils.ts
src/ui/router/: index.ts
src/ui/search/: Error.tsx  Result.tsx  Search.scss  Search.tsx  api.ts  slice.ts  util.ts
src/ui/store/: index.ts
src/ui/styles/: animations.scss  mixins.scss
src/ui/views/: About.vue  Home.vue  HomeView.vue
trimet/: api.js  arrivals.js  index.js  stops.js
(+24 files in other folders)
