[tool.poetry]
name = "mystops"
version = "3.0.0.dev0"
description = "MyStops - TriMet arrivals on a map"
authors = ["Wyatt Baldwin <code@wyattbaldwin.com>"]
license = "private"
readme = "README.md"

packages = [
    { include = "mystops", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"

org-djangokit-core = "~0.0.4"
org-djangokit-cli = "~0.0.5"

django = "^4.1.7"
markdown = "^3.4.1"
mercantile = "^1.2.1"
psycopg2 = "^2.9.5"
pydantic = "^1.10.4"
pymemcache = "^4.0.0"
requests = "^2.28.2"
runcommands = "^1.0a71"
tzlocal = "^4.2"

[tool.poetry.group.dev.dependencies]
org-djangokit-core = { path = "../djangokit/core", develop = true }
org-djangokit-cli = { path = "../djangokit/cli", develop = true }

ansible = "*"
black = "*"
isort = "*"
mypy = "*"
pytest = "*"
ruff = "*"

[tool.ruff]
ignore = ["E731"]

[tool.ruff.per-file-ignores]
"commands.py" = ["F722", "F821"]
"__init__.py" = ["F401"]

[tool.runcommands.globals]
env = "development"

[tool.runcommands.envs]
development = {}
production.host = "mystops.io"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
